build: Created the windows and macOs distribution